syntax = "proto3";

// If you make any changes make sure you run: make regenerate-proto

package agent_tracker;

option go_package = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/internal/module/agent_tracker";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "internal/module/modshared/modshared.proto";

// ConnectedAgentInfo contains information about a connected agentk.
message ConnectedAgentInfo {
  // Information about the agent sent by the agent.
  modshared.AgentMeta agent_meta = 1;
  // When the connection was established.
  google.protobuf.Timestamp connected_at = 2;
  // Uniquely identifies a particular agentk->kas connection.
  // Randomly generated when an agent connects.
  int64 connection_id = 3;
  // GitLab-wide unique id of the agent.
  int64 id = 4;
  // Id of the configuration project.
  int64 project_id = 5;
}

message ExpiringValue {
  // When the value should be considered expired.
  google.protobuf.Timestamp expires_at = 1;
  google.protobuf.Any value = 2;
}
